<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mailo.takengo.controllers.add_customer">



    <TextView
        android:id="@+id/customer"
        android:layout_width="395dp"
        android:layout_height="67dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="24sp"
        android:text="@string/add_customer"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />



    <EditText
        android:id="@+id/id_num"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_num"
        android:inputType="number"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/customer" />


    <EditText
        android:id="@+id/family_name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/family_name"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/id_num"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/private_name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/private_name"
        android:inputType="text"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/family_name" />


    <EditText
        android:id="@+id/phone_num"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_num"
        android:inputType="phone"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/private_name" />

    <EditText
        android:id="@+id/credit_num"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/credit_num"
        android:inputType="number"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_num" />

    <EditText
        android:id="@+id/mail_address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail_address"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/credit_num" />

    <Button
        android:id="@+id/add_customer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="174dp"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Add Customer"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/mail_address" />



</android.support.constraint.ConstraintLayout>
