<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mailo.takengo.controllers.add_model">



    <TextView
        android:id="@+id/model"
        android:layout_width="395dp"
        android:layout_height="67dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="24sp"
        android:text="@string/add_model"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />



    <EditText
        android:id="@+id/model_code"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/model_code"
        android:inputType="number"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/model" />


    <EditText
        android:id="@+id/model_name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/model_name"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/model_code"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/company_name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_name"
        android:inputType="text"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/model_name" />

    <EditText
        android:id="@+id/seats"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/seats"
        android:inputType="number"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/engine_capacity"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/engine_capacity"
        android:inputType="numberDecimal"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/company_name"
        tools:layout_editor_absoluteX="8dp" />



    <Button
        android:id="@+id/add_model"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="174dp"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="Add Model"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/seats" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="395dp"
        android:layout_height="58dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/engine_capacity"
        tools:layout_editor_absoluteX="9dp" />


</android.support.constraint.ConstraintLayout>
