<?xml version = "1.0" encoding = "utf-8"?>
    <RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height = "match_parent"
       tools:context = "com.example.mailo.takengo.controllers.Login">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Login"
            android:textSize="35sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/TakeAndGo"
        android:textSize="55sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/EnterName"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/abc"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/login"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="22dp"
        android:layout_toStartOf="@+id/textview"
        android:text="@string/login"
        android:textColorLink="@color/colorPrimary"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/Cancel"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/button" />

    </RelativeLayout>
