<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mailo.takengo.controllers.Customer"
    >


    <TextView
        android:id="@+id/customer"
        android:layout_width="395dp"
        android:layout_height="67dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="24sp"
        android:text="@string/customers"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_customer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:text="@string/add_customer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer"

        />

    <Button

        android:id="@+id/show_customers"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:text="@string/show_customers"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintLeft_toRightOf="@+id/add_customer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer" />
</android.support.constraint.ConstraintLayout>
