<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mailo.takengo.controllers.Main"
    android:background="@drawable/image_4">

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="35dp"
        android:layout_marginBottom="86dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/User_button"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/User_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/colorAccent"
        android:text="@string/customers"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Car_button"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/Car_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Models_button"
        android:layout_below="@+id/welcome_textView"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/colorAccent"
        android:text="@string/cars"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Models_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.493" />

    <Button
        android:id="@+id/Models_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Branches_button"
        android:layout_alignStart="@+id/Branches_button"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:background="@color/colorAccent"
        android:text="@string/models"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Branches_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.493" />


    <Button
        android:id="@+id/Branches_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/User_button"
        android:layout_marginBottom="107dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        android:text="@string/branches"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.496" />


</android.support.constraint.ConstraintLayout>
